--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to Priyanshu's Portfolio. Full-Stack Web Developer and Blockchain Developer"
+    />
+    <meta
+      name="keywords"
+      content="priyanshu sharma, priyanshu portfolio, priyanshusharma01, priyanshusharma, priyanshu portfolio, full stack portfolio, priyanshu, priyanshu sharma portfolio, portfolio, blockchain portfolio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Priyanshu Sharma's Portfolio</title>
+    <title>Priyanshu Sharma - Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
